fixed the container height (#16)
* fixed the container height

* Scroll bar fixes

* Scrollbar fix

* Update default.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,11 @@
 @layer base {
   html {
     font-size: 16px;
+    scrollbar-gutter: stable;
+  }
+
+  body {
+    overflow-y: scroll;
   }
 
   a {
